# Vox

./: .gitignore  CMakeLists.txt  README.md  TODO.md  VkApi.hpp  Vox.sln  VukVuk.sln  vcpkg.json
Vox/: VkApp.cpp  VkApp.hpp  VkUtils.cpp  VkUtils.hpp  Vox.vcxproj  Vox.vcxproj.filters
Vox/shaders/: shader.vert  vert.spv
VukVuk/: VkApp.cpp  VkApp.hpp  VkUtils.cpp  VkUtils.hpp  VukVuk.vcxproj  VukVuk.vcxproj.filters  main.cpp
shaders/: glsl2spirv.bat  obj_red.vert  obj_red_glsl.vert  shader.frag  vert.spv
shaders/glsl/: obj.frag  obj.json  obj_red.frag  obj_red.vert
shaders/metadata/: obj.json  obj_red.json
shaders/spirv/: obj.frag  obj.vert  obj_red.frag  obj_red.vert
source/: Main.cpp  application.cpp  application.h  camera.cpp  camera.h  constants.cpp  constants.h  main.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model_manager.cpp  model_manager.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  shaders.cpp  shaders.h  texture.cpp  texture_atlas.cpp  texture_manager.cpp  texture_manager.h  util.cpp  util.h  vertex.cpp  vertex.h
source/vulkan/: VkApi.cpp  VkApp.cpp  VkApp.hpp  VkUtils.cpp  VkUtils.hpp
src/: main.cpp
src/application/: application.cpp  application.h
src/camera/: camera.cpp  camera.h
src/material/: material.cpp
src/mesh/: mesh.cpp  mesh.h
src/model/: model.h  model_manager.cpp  model_manager.h
src/shader/: shader.h  shader_manager.h
src/texture/: texture.h  texture_atlas.cpp  texture_atlas.h
src/vertex/: vertex.cpp  vertex.h
